Function for getting a random word is done

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="conatiner">
         <h1 class="title">Spaceman</h1>
-        <div id="mistakes">Damage: <span id="damage-taken">0</span> of <span id="max-damage">6</span></div>
+        <div id="damage">Damage: <span id="damage-taken">0</span> of <span id="max-damage">6</span></div>
         <div id="images">
             <div id='space-background'> </div>
             <div id="cockpit"> </div>
