--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <h1 class="title">Spaceman</h1>
         <div id="damage">Damage: <span id="damage-taken">0</span> of <span id="max-damage">6</span></div>
         <div id="images">
-            <div id='space-background'> </div>
-            <div id="cockpit"> </div>
-            <div id="enemy-ship"></div>
+            <img id='space-background'>
+            <img id="cockpit">
+            <img id="enemy-ship">
         </div>
         <div id="insideCockpit">
-            <div id='wordGuessHud'>Guess word line</div>
+            <p id='wordGuessHud'>Guess word line</p>
             <div id="controls"></div>
-            <div id="ShipDamageHud"></div>
+            <img id="ShipDamageHud">
             <button class="btn btn-info" onclick="reset()">EJECT</button>
         </div>
     </div>
