success and failure conditions up and working

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <div id="damage">Damage: <span id="damage-taken">0</span> of <span id="max-damage">6</span></div>
         <div id="images">
             <img id='space-background'>
-            <img id="cockpit">
-            <img id="enemy-ship">
+            <img id="cockpit" src="./img/Game-Start.png">
         </div>
         <div id="insideCockpit">
             <p id='wordGuessHud'>Guess word line</p>
