--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
 
 <body>
     <div class="conatiner">
-        <h1 class="title">Spaceman</h1>
-        <div id="damage">Damage: <span id="damage-taken">0</span> of <span id="max-damage"></span></div>
-        <div id="images">
+        <h1>Spaceman</h1>
+        <!-- <div id="damage">Damage: <span id="damage-taken">0</span> of <span id="max-damage"></span></div> -->
+        <div id="inside-game">
+            <div id="damage">Damage: <span id="damage-taken">0</span> of <span id="max-damage"></span></div>
             <img id="cockpit" src="./img/Game-Start.png">
-        </div>
-        <div id="insideCockpit">
-            <p id='wordGuessHud'>Guess word line</p>
-            <div id="controls"></div>
-            <button id="eject" onclick="reset()">EJECT</button>
+            <!-- <p id='wordGuessHud'>Guess word line</p> -->
+            <!-- </div> -->
+            <div id="insideCockpit">
+                <p id='wordGuessHud'>Guess word line</p>
+                <div id="controls"></div>
+                <button id="eject" onclick="reset()">EJECT</button>
+            </div>
         </div>
     </div>
 
