Started media querie

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-    <script src="./js/spaceman1.js"></script>
+    <script src="./js/spaceman.js"></script>
 </body>
 
 </html>
