fixed class toggle issue

--- a/index.html
+++ b/index.html
@@ -19,13 +19,7 @@
 
             <div id="damage">Damage: <span id="damage-taken">0</span> of <span id="max-damage"></span></div>
             <img id="cockpit" src="./img/Game-Start.png">
-            <!-- <p id='wordGuessHud'>Guess word line</p> -->
-            <!-- </div> -->
-            <div id="insideCockpit">
-                <!-- <p id='wordGuessHud'>Guess word line</p> -->
-                <!-- <div id="controls"></div> -->
-                <!-- <button id="eject" onclick="reset()">EJECT</button> -->
-            </div>
+            <div id="insideCockpit"></div>
         </div>
     </div>
 
