fully functional code

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         <h1>Spaceman</h1>
 
         <div id="inside-game">
-            <p id='wordGuessHud'>Guess word line</p>
+
+            <p id='wordGuessHud'>Press Eject</p>
             <button id="eject" onclick="eject()">EJECT</button>
+            <div id="explode"></div>
             <div id="controls"></div>
 
             <div id="damage">Damage: <span id="damage-taken">0</span> of <span id="max-damage"></span></div>
